# terramod

./: .gitignore  LICENSE  README.md  pyproject.toml
_legacy/: LICENSE  README.md
_legacy/_res/: aws_pngs.drawio
_legacy/apigw/: apigw.tf  lambda.tf  output.tf
_legacy/apigw_add_auth/: apigw.tf  cloudwatch.tf  logformat.json
_legacy/authenticate/: apigw.tf  cognito.tf  domain.tf  lambda.tf  ses.tf
_legacy/cloudfront/: acm.tf  s3logging.tf  s3web.tf  variable.tf
_legacy/cognito_ses/: main.tf  variable.tf
_legacy/cognito_w_schemas/: outputs.tf
_legacy/old_apigw_nolambda/: apigw.tf  cloudwatch.tf
acm/: output.tf  varialbes.tf
apigw/: apigw.tf  cloudmap.tf  lambda.tf  variables.tf
apigw_add_auth/: apigw.tf  lambda.tf  variables.tf
apigw_nolambda/: apigw.tf  outputs.tf  variable.tf
authenticate/: apigw.tf  cloudwatch.tf  cognito.tf  domain.tf  lambda.tf  variable.tf
cf_pubonly/: cloudfront.tf  s3logging.tf  s3web.tf  variables.tf
cloudfront/: cloudfront.tf  iam.tf  lambda.tf  s3web.tf
cognito_ses/: main.tf  variable.tf
cognito_w_schemas/: cognito.tf  sms.tf  variable.tf
ec2/: ec2.tf  variables.tf
network/: main.tf  output.tf  variable.tf
old_apigw_nolambda/: apigw.tf  cloudmap.tf  outputs.tf  variable.tf
rds/: rds.tf  variables.tf
s3/: main.tf  output.tf  variable.tf
ses/: output.tf  variables.tf
ssm/: README.md  variables.tf
test_apigw/: apigw.tf  openapi.json  outputs.tf  variable.tf
test_cognito/: main.tf  ses.tf  variable.tf
test_ses/: ses.tf  variable.tf
vpc/: inetgw.tf  natgw.tf  rtb.tf  s3_ep.tf  subnet.tf  variable.tf  vpc.tf
vpc_privsbnet/: rtb.tf  s3_ep.tf  subnet.tf  variable.tf
(+97 files in other folders)
